# 7-wonders-guide

./: .gitignore  Makefile  pyproject.toml
SevenWondersGuide/: manage.py
SevenWondersGuide/Guide/: admin.py  apps.py  logging.py  models.py  urls.py  views.py
SevenWondersGuide/Guide/migrations/: 0001_initial.py  0002_alter_card_options_alter_cardtype_options_and_more.py
SevenWondersGuide/Guide/templates/guide/: details.html  main_page.html  symbols.html
SevenWondersGuide/SevenWondersGuide/: asgi.py  settings.py  urls.py  wsgi.py
seven_wonders_guide/: db.sqlite3.old  manage.py
seven_wonders_guide/guide/: admin.py  urls.py  views.py
seven_wonders_guide/guide/migrations/: 0001_initial.py  0002_alter_card_options_alter_cardtype_options_and_more.py
seven_wonders_guide/guide/templates/guide/: details.html  main_page.html  wonder.html
seven_wonders_guide/seven_wonders_guide/: asgi.py  settings.py  urls.py  wsgi.py
