[tool.poetry]
name = "7wondersguide"
version = "0.1.0"
description = ""
authors = ["sequencer <sequencer@o2.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
django = "^4.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
